- Controller classes are cleaned and optimized.
* Clean and apply DRY principle on data layer classes and methods.
* Make data layer classes and methods static.